# sin-param

./: README.md  main.py  pyproject.toml
notebooks/: reference.ipynb
notebooks/sec3.1/fourier_analysis/: fourier_analysis.ipynb
notebooks/sec3.1/similarity_analysis/: similarity_viz.ipynb
notebooks/sec3.2/activations_probing/: llama1b.ipynb  llama3b.ipynb  llama8b.ipynb  olmo13b.ipynb  olmo1b.ipynb  olmo7b.ipynb  phi15b.ipynb
notebooks/sec3.3/model_probe_transfer/: llama1b.ipynb  llama1b_natural.ipynb  llama3b.ipynb  llama8b.ipynb  olmo13b.ipynb  olmo1b.ipynb  olmo7b.ipynb  phi15b.ipynb
notebooks/sec4.1/multitoken_probing/: model_multitoken_probing.py
notebooks/sec4.2/output_probing/: output_probing_add.ipynb
notebooks/sec4.2/output_probing/.ipynb_checkpoints/: output_probing_div-checkpoint.ipynb  output_probing_multi-checkpoint.ipynb  output_probing_sub-checkpoint.ipynb
notebooks/sec4.2/per_layer_patching/: 1_comp_prediction_vs_probing_div.py  2_fit_patches.py  3_patch_preds.py  4_eval_patched.py
notebooks/sec4.3/: models_emb_analysis_days_months.ipynb  models_emb_analysis_single_digit.ipynb
