[project]
name = "sin-param"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "kaleido>=1.3.0",
    "lovely-tensors>=0.1.22",
    "matplotlib>=3.11.0",
    "mypy>=2.1.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "papermill>=2.7.0",
    "polars>=1.42.1",
    "ruff>=0.15.20",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
    "typer>=0.26.8",
]
